# rust_2fa_backend

./: .env.example  AIUSAGE.md  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260101000001_create_users.sql  20260101000002_create_tasks.sql  20260101000003_create_login_challenges.sql  20260101000004_create_email_logs.sql
src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  redis_cache.rs  state.rs
src/handlers/: auth_handlers.rs  dev.rs  mod.rs  seed.rs  tasks.rs
tests/: integration_test.rs  unit_auth_test.rs
