[package]
name = "rust_2fa"
version = "0.1.0"
edition = "2021"

[lib]
name = "task_api"
path = "src/lib.rs"

[[bin]]
name = "task-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }